<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_makepost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/post_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_title_label" />

    <EditText
        android:id="@+id/post_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_title_hint"/>

    <Button
        android:id="@+id/post_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_post_button"/>

</LinearLayout>