<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/list_item_shoplist"
        android:text="Coffee Shop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textSize="24dp"
        xmlns:android="http://schemas.android.com/apk/res/android" />
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/about_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About" />
        <Button
            android:id="@+id/see_orders_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Past Orders" />

        <Button
            android:id="@+id/visit_shop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Visit" />
    </LinearLayout>
</LinearLayout>
